--- a/hacking/archivos.html
+++ b/hacking/archivos.html
@@ -322,14 +322,13 @@ function holaMundo() {
                 </div>
 -->
 
- <!--
+<!-- 
 <div class="contenedor">
     <div class="etiqueta">
         Muestra una lista de archivos y carpetas en el directorio actual.
     </div>
-    <div class="comandos">
-      
-      <textarea class="text" oninput="ajustarAncho(this)">Get-NetTCPConnection | Select-Object -Property *,@{'Name' = 'ProcessName';'Expression'={(Get-Process -Id $_.OwningProcess).Name}}</textarea>
+    <div class="comandos scrollbar">      
+      <textarea class="text" oninput="ajustarAncho(this)">Get-NetTCPConnection | Select-Object -Property *,@{'Name' = 'ProcessName'; aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</textarea>
       <button><i class="fa fa-clone"></i><span> Copy</span></button>
     </div>
 </div>
