--- a/hacking/windows.html
+++ b/hacking/windows.html
@@ -535,7 +535,7 @@
 
                   <div class="contenedor">
                     <div class="etiqueta">
-                      Administrar las listas de control de acceso (ACL) de archivos y directorios. Puedes usarlo para ver y modificar los permisos y derechos de acceso de archivos y carpetas en sistemas Windows (archivo_o_directorio es el nombre del archivo o directorio para el cual deseas administrar los permisos, /grant o /deny se utilizan para otorgar o denegar permisos, Usuario es el nombre del usuario o grupo al que deseas asignar permisos y Permiso es el permiso que deseas otorgar o denegar). 
+                      Administra las listas de control de acceso (ACL) de archivos y directorios. Puedes usarlo para ver y modificar los permisos y derechos de acceso de archivos y carpetas en sistemas Windows (archivo_o_directorio es el nombre del archivo o directorio para el cual deseas administrar los permisos, /grant o /deny se utilizan para otorgar o denegar permisos, Usuario es el nombre del usuario o grupo al que deseas asignar permisos y Permiso es el permiso que deseas otorgar o denegar). 
                     </div>
                     <div class="comandos">
                       <input type="text" class="text" value="icacls archivo_o_directorio /grant:r Usuario:Permiso" oninput="ajustarAncho(this)">
