--- a/hacking/archivos.html
+++ b/hacking/archivos.html
@@ -57,7 +57,7 @@
                 <ul>
                     <li><marcador class="resaltado1">/sys/class/dmi/id/product_name</marcador></li>
                     <p>Este archivo identifica el tipo de máquina en la que se está ejecutando Linux.</p>
-                    <li><marcador class="resaltado1">cat /etc/os-release</marcador></li>
+                    <li><marcador class="resaltado1">/etc/os-release</marcador></li>
                     <p>Este comando proporcionará información detallada sobre la distribución, incluyendo su nombre y versión.</p>
                     <li><marcador class="resaltado1">/sys/class/dmi/id/sys_vendor</marcador></li>
                     <p>Proporciona información sobre la marca que distribuye la máquina.</p>
@@ -322,7 +322,7 @@ function holaMundo() {
                 </div>
 -->
 
-<!-- 
+<!-- Modificar el tamaño de la barra horizontal para chrome
 <div class="contenedor">
     <div class="etiqueta">
         Muestra una lista de archivos y carpetas en el directorio actual.
