--- a/network/dhcp.html
+++ b/network/dhcp.html
@@ -68,7 +68,7 @@
                 </ul>
                 <h2>Configuración de DHCP</h2>
                 <ul>
-                    <li><marcador class="resaltado8">Routers y switches:</Servidores DHCP dedicados:marcador> Los dispositivos de red, como routers y switches, a menudo actúan como servidores DHCP en pequeñas redes o redirigen solicitudes DHCP a servidores dedicados.</li>
+                    <li><marcador class="resaltado8">Routers y switches:</marcador> Los dispositivos de red, como routers y switches, a menudo actúan como servidores DHCP en pequeñas redes o redirigen solicitudes DHCP a servidores dedicados.</li>
                     <li><marcador class="resaltado8">Servidores DHCP dedicados:</marcador> En redes más grandes, se utilizan servidores DHCP dedicados que gestionan la asignación de direcciones IP y otros parámetros.</li>
                     <li><marcador class="resaltado8">Módems y enrutadores combinados:</marcador> Son dispositivos proporcionados por los proveedores de servicios de Internet tienen funcionalidad DHCP para facilitar la configuración de direcciones IP y otros parámetros de red en dispositivos conectados.</li>
                 </ul>
