--- a/hacking.html
+++ b/hacking.html
@@ -66,6 +66,10 @@
             <img src="media/imagen4.png" alt="Comandos Básicos de Windows" class="article-image">
             <h2><a href="hacking/windows.html">Comandos Básicos de Windows</a></h2>
         </div> 
+        <div class="article-section">
+            <img src="media/imagen4.png" alt="Anonimato" class="article-image">
+            <h2><a href="hacking/anonimato.html">Anonimato</a></h2>
+        </div>    
         <!-- Nuevo artículo -->
         <div class="article-section">
             <img src="media/imagen4.png" alt="En proceso" class="article-image">
