--- a/network/dhcp.html
+++ b/network/dhcp.html
@@ -77,11 +77,11 @@
                 <h6>Cisco</h6>
                 <div class="mi-contenedor">
                     <div class="barra-superior">
-                        <button id="boton-copiar"><i class="fas fa-copy"></i>&nbsp;Copy</button>
+                        <button class="boton-copiar"><i class="fas fa-copy"></i>&nbsp;Copy</button>
                     </div>
                     <div class="codigo">
-                        <pre>
-<code>Router> enable
+                        <!-- Contenido del código -->
+                        <pre><code>Router> enable
 Router# configure terminal
 Router(config)#
 Router(config)# ip dhcp pool Mi_Pool_DHCP
@@ -125,11 +125,11 @@ Router(config)# show ip dhcp binding</code></pre>
                 <h6>Huawei</h6>
                 <div class="mi-contenedor">
                     <div class="barra-superior">
-                        <button id="boton-copiar"><i class="fas fa-copy"></i>&nbsp;Copy</button>
+                        <button class="boton-copiar"><i class="fas fa-copy"></i>&nbsp;Copy</button>
                     </div>
                     <div class="codigo">
-                        <pre>
-<code><Router> system-view
+                        <!-- Contenido del código -->
+                        <pre><code>system-view
 [Router]#
 [Router] dhcp enable
 [Router] dhcp server group Mi_Pool_DHCP
