--- a/hacking/archivos.html
+++ b/hacking/archivos.html
@@ -324,13 +324,14 @@ function holaMundo() {
 -->
 
 <!-- Modificar el tamaño de la barra horizontal para chrome
+
 <div class="contenedor">
     <div class="etiqueta">
         Muestra una lista de archivos y carpetas en el directorio actual.
     </div>
     <div class="comandos scrollbar">      
       <textarea class="text" oninput="ajustarAncho(this)">Get-NetTCPConnection | Select-Object -Property *,@{'Name' = 'ProcessName'; aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</textarea>
-      <button><i class="fa fa-clone"></i><span> Copy</span></button>
+      <button><i class="fa fa-clone"></i><span></span></button>
     </div>
 </div>
 -->
