--- a/hacking/anonimato.html
+++ b/hacking/anonimato.html
@@ -214,7 +214,7 @@ New MAC:       aa:bb:cc:dd:ee:ff (unknown)
                     </section>
                 </div>
                 <br>
-                <p>Cambiar la Dirección MAC en el Arranque: Si deseas que la dirección MAC se cambie automáticamente en cada arranque del sistema, puedes agregar el comando de cambio de MAC a un script de inicio. Esto garantiza que la dirección MAC se cambie cada vez que el sistema se reinicie.</p>
+                <p>Si deseas que la dirección MAC se cambie automáticamente en cada arranque del sistema, puedes agregar el comando de cambio de MAC a un script de inicio. Esto garantiza que la dirección MAC se cambie cada vez que el sistema se reinicie.</p>
                 <h6>Proxychains</h6>
                 <p>Proxychains es una herramienta que te permite enrutar tus conexiones a través de múltiples servidores proxy, ocultando tu dirección IP y dificultando el rastreo de tus actividades en línea.</p>
                 <p>ProxyChains forza para que cualquier aplicación pase a través de un proxy como si fuera un túnel. Puede ser útil para realizar tareas relacionadas con la privacidad, la seguridad y el anonimato en línea. Aquí te explico cómo puedes utilizar ProxyChains en un sistema Linux:</p>
