--- a/hacking/expresiones.html
+++ b/hacking/expresiones.html
@@ -282,7 +282,7 @@
                 </div>
                 <div class="contenedor">
                     <div class="etiqueta">
-                        Reemplazar comas con espacios en un archivo
+                        Reemplazar comas con saltos de línea en un archivo
                     </div>
                     <div class="comandos">
                       <input type="text" class="text" value="sed &quot;s/,/\r\n/g&quot; archivo.txt" oninput="ajustarAncho(this)">
