--- a/network/dhcp.html
+++ b/network/dhcp.html
@@ -75,11 +75,11 @@
                 <br>
                 <p>La configuración de DHCP en dispositivos, como routers o switches, implica varios pasos clave. A continuación, te mostraré cómo configurar un servidor DHCP en un router Cisco utilizando comandos de ejemplo en el sistema operativo Cisco IOS (Internetwork Operating System). Ten en cuenta que los detalles específicos pueden variar según el modelo y la versión del dispositivo, pero los conceptos generales son similares.</p>
                 <h6>Cisco</h6>
-                <div class="mi-contenedor">
-                    <div class="barra-superior">
-                        <button class="boton-copiar"><i class="fas fa-copy"></i>&nbsp;Copy</button>
+                <div class="consola">
+                    <div class="barra-superior-consola">
+                        <button class="boton-copiar-consola"><i class="fas fa-copy"></i>&nbsp;Copy</button>
                     </div>
-                    <div class="codigo">
+                    <div class="codigo-consola">
                         <!-- Contenido del código -->
                         <pre><code>Router> enable
 Router# configure terminal
@@ -123,11 +123,11 @@ Router(config)# show ip dhcp binding</code></pre>
                     <p>Por último se mostrará una lista de las direcciones IP asignadas por el servidor DHCP, junto con la dirección MAC y otra información relacionada.</p>
                 </ol>
                 <h6>Huawei</h6>
-                <div class="mi-contenedor">
-                    <div class="barra-superior">
-                        <button class="boton-copiar"><i class="fas fa-copy"></i>&nbsp;Copy</button>
+                <div class="consola">
+                    <div class="barra-superior-consola">
+                        <button class="boton-copiar-consola"><i class="fas fa-copy"></i>&nbsp;Copy</button>
                     </div>
-                    <div class="codigo">
+                    <div class="codigo-consola">
                         <!-- Contenido del código -->
                         <pre><code>system-view
 [Router]#
