--- a/hacking/anonimato.html
+++ b/hacking/anonimato.html
@@ -60,7 +60,7 @@
                 <h6>Cambiador de Dirección MAC (macchanger)</h6>
                 
                 <p>Macchanger es una herramienta de línea de comandos disponible en sistemas basados en Linux que permite a los usuarios cambiar la dirección MAC de sus interfaces de red, lo que puede dificultar que los sitios web y las redes rastreen tu dispositivo a través de esta identificación única. La dirección MAC (Media Access Control) es un identificador único que se utiliza para identificar dispositivos en una red. Cambiar la dirección MAC de tu dispositivo puede proporcionar un mayor nivel de anonimato y seguridad al navegar por la red. Linux y algunas otras plataformas ofrecen comandos incorporados para cambiar la dirección MAC.</p>
-                <p>Reemplaza "nombre_de_interfaz" por el nombre de la interfaz de red que deseas verificar, como "eth0" o "wlan0".</p>
+                <p>Reemplaza "nombre_de_interfaz" por el nombre de la interfaz de red que deseas usar, como "eth0" o "wlan0".</p>
                 <p>Para ver la dirección MAC actual de una interfaz de red, puedes usar el siguiente comando (Para ver el nombre de las interfaces de red, puedes utilizar el comando <marcador class="subrayado">ifconfig</marcador>) :</p>
                 <!-- <div id="container"> -->
             <div id="terminal">
