--- a/hacking/owasp.html
+++ b/hacking/owasp.html
@@ -69,7 +69,7 @@
                     <li><marcador class="resaltado2">Server-Side Template Injection (SSTI):</marcador> En esta vulnerabilidad, un atacante puede inyectar código malicioso en una plantilla del servidor que se utiliza para generar contenido dinámico. Si el servidor evalúa la entrada del atacante como parte del código de la plantilla, podría ejecutar código no deseado y comprometer el sistema.</li>
                     <li><marcador class="resaltado2">Falla en Configuración de Seguridad de HTTP (HTTP Security Configuration Failure):</marcador> Esta vulnerabilidad se centra en la falta de configuración segura de encabezados HTTP, lo que puede permitir ataques de Cross-Site Scripting (XSS) y Clickjacking.</li>
                 </ul>
-                <div class="blog-image-grande">
+                <div class="blog-image-zoom">
                     <img src="media/owasp2.jpg" alt="">
                 </div>
                 <h2>Puntos importantes</h2>               
