--- a/hacking/windows.html
+++ b/hacking/windows.html
@@ -42,14 +42,14 @@
                 <p>La Command Prompt, o simplemente CMD, es una interfaz de línea de comandos que ha estado presente en Windows durante décadas. Aunque ha sido superada por PowerShell en términos de funcionalidad y versatilidad, aún es ampliamente utilizada y es útil para realizar tareas básicas en Windows.</p>
                 <h2>Diferencias Clave</h2>
                 <ul>
-                    <li><marcador class="resaltado8">Sintaxis:</marcador> PowerShell utiliza un enfoque de "verbo-sustantivo" para sus comandos, lo que hace que la sintaxis sea más coherente y legible en comparación con CMD.</li>
+                    <li><marcado        max-width: 100%;r class="resaltado8">Sintaxis:</marcador> PowerShell utiliza un enfoque de "verbo-sustantivo" para sus comandos, lo que hace que la sintaxis sea más coherente y legible en comparación con CMD.</li>
                     <li><marcador class="resaltado8">Capacidad de scripting:</marcador> PowerShell es más adecuado para la creación de scripts avanzados y la automatización de tareas.</li>
                     <li><marcador class="resaltado8">Soporte para .NET:</marcador> PowerShell ofrece acceso completo al marco de trabajo .NET, lo que permite una mayor funcionalidad y flexibilidad.</li>
                 </ul>
                 <h2>Command Prompt (CMD)</h2>
                 <p>La Command Prompt, o simplemente CMD, es una interfaz de línea de comandos que ha estado presente en Windows durante décadas. Aunque ha sido superada por PowerShell en términos de funcionalidad y versatilidad, aún es ampliamente utilizada y es útil para realizar tareas básicas en Windows.</p>
                 
-                <div class="blog-image-grande">
+                <div class="blog-image-zoom">
                     <img src="media/windows1.jpg" alt="">
                 </div>
 
@@ -708,7 +708,7 @@
                 <p>PowerShell es una interfaz de línea de comandos más avanzada que CMD y proporciona una amplia gama de capacidades de administración y automatización en Windows. Combina la facilidad de uso de los comandos tradicionales con la capacidad de escribir scripts más complejos.</p>
                 <p>En su mayoría, los comandos de Command Prompt (Cmd) se pueden ejecutar en PowerShell, ya que PowerShell está diseñado para ser compatible con los comandos de Cmd para facilitar la transición y la interoperabilidad. Sin embargo, en PowerShell, también se pueden utilizar cmdlets específicos de PowerShell para realizar muchas de las mismas tareas de manera más eficiente y con mayor flexibilidad.</p>
                 
-                <div class="blog-image-grande">
+                <div class="blog-image-zoom">
                     <img src="media/windows2.jpg" alt="">
                 </div>
 
